New Crowdin updates (#1940)

--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "Die Wallet, die du versuchst wiederherzustellen, existiert bereits.",
   "api.errors.WalletFileImportError": "Die Wallet kann nicht importiert werden. Bitte stelle sicher, dass die angegebene Datei korrekt ist.",
   "api.errors.assetInfoApiError": "Fehler vom Server beim Abrufen der Asset-Informationen.",
+  "api.errors.assetOverflowError": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "api.errors.checkAdressesInUseApiError": "Fehler vom Server während der Prüfung der verwendeten Adresse.",
   "api.errors.currentCoinPriceError": "Derzeit ist der aktuelle Tageskurs nicht verfügbar.",
   "api.errors.discoverAddressesError": "Fehler von der API während der Suche nach Adressen.",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "Ich trage meine Adresse händisch ein",
   "buysell.dialog.selectAddress": "Bitte wähle die Empfängeradresse aus. Diese wird dem Partner Provider Changelly mitgeteilt um ADA zu ver/kaufen. ",
   "buysell.dialog.title": "Kaufe/Verkaufe ADA",
+  "connector.connect.connectedWallets": "Connected Wallets",
+  "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.settings.about": "About",
   "crash.screen.title": "Yoroi ist abgestürzt",
   "daedalusTransfer.error.noTransferTxError": "Es gibt keine zu versendende Transaktion.",
   "daedalusTransfer.error.transferFundsError": "Das Guthaben konnte nicht überwiesen werden.",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "Daedalus Wallet wird wiederhergestellt",
   "daedalusTransfer.waiting.warning": "Dies kann lange dauern oder bei schlechten Internet-Verbindungen fehlschlagen",
   "decryption.label": "Entschlüsselungs-Kennwort",
+  "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
+  "ergo-connector.connect.noWalletsFound": "No wallets found",
+  "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "Mehr darüber kannst  Du in unserem {blogLink} lesen.",
+  "global.connector.connectedWebsites": "Verbundene Webseiten",
+  "global.connector.messageReadOnly": "Wir gewähren Lesezugriff um die utxos/Adressen zu sehen.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi Dapp Connector",
   "global.contact": "den Support kontaktieren",
   "global.copyTooltipMessage": "Kopiert",
   "global.errors.fieldIsRequired": "Dieses Feld muss ausgefüllt werden.",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "Undelegieren",
   "global.label.addToAddressbook": "Zum Adressbuch hinzufügen",
   "global.label.allow": "Erlauben",
+  "global.label.assets": "Assets",
   "global.label.choose": "Wähle",
   "global.labels.LearnMore": "Erfahre mehr",
   "global.labels.addMemo": "Notiz hinzufügen",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Ausgabenschlüssel",
   "global.labels.spendingKeyHash": "Ausgabenschlüssel Prüfsumme",
-  "global.labels.stakepool": "!!!Stakepool Namen",
+  "global.labels.stakepool": "Stakepool Namen",
   "global.labels.stakingKey": "Staking Schlüssel",
   "global.labels.stakingKeyHash": "Staking Schlüssel Prüfsumme",
   "global.labels.upgrade": "Aktualisieren",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "Aktuelle Version:",
   "settings.general.aboutYoroi.website": "Yoroi Webseite",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
-  "settings.general.explorer": "Blockchain Explorer",
+  "settings.general.explorer": "explorer",
   "settings.general.languageSelect.info": "Für EMURGO ist die Benutzerfreundlichkeit sehr wichtig. Wir glauben, Blockchain-Konzepte zu verstehen, ist in der eigenen Sprache einfacher. Wir versuchen, so viele Sprachen wie möglich anzubieten, benötigen für ein breiteres Angebot aber die Unterstützung von Übersetzern aus der Community. Die ausgewählte Sprache ist vollständig von der Community übersetzt worden.",
   "settings.general.languageSelect.labelInfo": "Die ausgewählte Sprache ist vollständig von der Community übersetzt worden",
   "settings.general.translation.acknowledgment": "Ein Dank an folgende Personen für deren Beiträge: ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Löschen",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Bestätigen",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "Letzte entfernen",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "Ungültige Wiederherstellungs-Phrase",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "{number} verbleibende Wörter",
   "wallet.restore.dialog.paperPasswordLabel": "Paper Wallet-Passwort",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "PIN bestätigen",
   "wallet.voting.dialog.registerLabel": "Registrieren",
   "wallet.voting.dialog.step.confirm.line1": "Bitte geben Sie die PIN ein, da Du sie <strong>jedes Mal</strong> benötigst, wenn Du auf die Catalyst Voting App zugreifen möchtest.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Bestätige dass ich die PIN notiert habe",
+  "wallet.voting.dialog.step.pin.actionButton": "Bestätige dass ich die PIN notiert habe",
   "wallet.voting.dialog.step.pin.line1": "Bitte notiere die PIN, da Du sie <strong>jedes Mal</strong> benötigst, wenn Du auf die Catalyst Voting App zugreifen möchtest.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Bestätige dass ich den QR code gespeichert habe",
+  "wallet.voting.dialog.step.qr.actionButton": "Bestätige dass ich den QR code gespeichert habe",
   "wallet.voting.dialog.step.qr.line2": "Der folgende QR-Code ist das generierte Zertifikat, das von der Catalyst-App benötigt wird, um am Abstimmungsprozess von Cardano teilnehmen zu können.",
   "wallet.voting.dialog.step.qr.line3": "Wir empfehlen außerdem, einen Screenshot davon als Backup zu machen - nach dem Klicken auf \"Abschließen\" kannst Du nicht mehr auf diesen QR-Code zugreifen.",
   "wallet.voting.dialog.step.qr.lineTitle": "Benutze die Catalyst Wahl-App um den QR-code zu scannen",
