--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "Le wallet que vous essayez de restaurer existe déjà.",
   "api.errors.WalletFileImportError": "Le wallet n'a pas pu être importé. Veuillez vérifier que vous avez fourni le bon fichier.",
   "api.errors.assetInfoApiError": "Erreur reçue du serveur lors de l'obtention d'informations sur les actifs.",
+  "api.errors.assetOverflowError": "Valeur maximale d'un jeton à l'intérieur d'une UTXO dépassée (débordement).",
   "api.errors.checkAdressesInUseApiError": "Erreur reçue du serveur lors du contrôle des adresses.",
   "api.errors.currentCoinPriceError": "Le cours actuel de ce jeton n'est pas disponible en ce moment.",
   "api.errors.discoverAddressesError": "Erreur reçue de l'API durant la recherche des adresses.",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
   "buysell.dialog.title": "Buy / Sell ADA",
+  "connector.connect.connectedWallets": "Portefeuilles connectés",
+  "connector.connect.noWebsitesConnected": "Vous n'avez pas encore de sites web connectés",
+  "connector.settings.about": "À propos",
   "crash.screen.title": "Yoroi a planté",
   "daedalusTransfer.error.noTransferTxError": "Il n'y pas de transaction à envoyer.",
   "daedalusTransfer.error.transferFundsError": "Impossible d'envoyer les fonds.",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "Le wallet Daedalus est en cours de récupération",
   "daedalusTransfer.waiting.warning": "Cela peut prendre du temps ou échouer si vous avez une mauvaise connexion internet",
   "decryption.label": "Mot de passe de déchiffrage",
+  "ergo-connector.connect.info": "Vos préférences de connexion seront enregistrées dans votre liste Yoroi dApp.",
+  "ergo-connector.connect.noWalletsFound": "Pas de portefeuilles trouvés",
+  "ergo-connector.label.connect": "Se connecter à",
+  "ergo-connector.label.selectAllWallets": "Sélectionner tous les portefeuilles",
   "global.blog.learnMore": "Pour en savoir plus, vous pouvez lire notre {blogLink}.",
+  "global.connector.connectedWebsites": "Sites web connectés",
+  "global.connector.messageReadOnly": "Nous accordons la possibilité de consulter les utxos/adresses en lecture seule.",
+  "global.connector.poweredByErgo": "Propulsé par Ergo",
+  "global.connector.yoroiDappConnector": "Connecteur de Dapp Yoroi",
   "global.contact": "contacter l'assistance",
   "global.copyTooltipMessage": "Copié",
   "global.errors.fieldIsRequired": "Veuillez remplir ce champ.",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "Ne plus déléguer",
   "global.label.addToAddressbook": "Ajouter au carnet d'adresses",
   "global.label.allow": "Permettre",
+  "global.label.assets": "assets",
   "global.label.choose": "Choisir",
   "global.labels.LearnMore": "En savoir plus",
   "global.labels.addMemo": "Ajouter un mémo",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Clé de paiement",
   "global.labels.spendingKeyHash": "Hash de la clé de paiement",
-  "global.labels.stakepool": "!!!Nom du Pool",
+  "global.labels.stakepool": "Nom du Pool",
   "global.labels.stakingKey": "Clé de Staking",
   "global.labels.stakingKeyHash": "Hash de la clé de staking",
   "global.labels.upgrade": "Mettre à jour",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "Version actuelle :",
   "settings.general.aboutYoroi.website": "Site web de Yoroi",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
-  "settings.general.explorer": "Explorateur de Blockchain",
+  "settings.general.explorer": "explorateur",
   "settings.general.languageSelect.info": "Pour EMURGO, la convivialité de Yoroi est importante. Nous pensons qu'il est plus facile de comprendre les concepts autour des blockchains dans votre langue maternelle. Nous essayons de proposer autant de langues que possible, mais pour cela nous devons accepter l'aide de traducteurs issus de la communauté. La traduction de la langue que vous avez choisie est entièrement assurée par la communauté.",
   "settings.general.languageSelect.labelInfo": "La traduction de la langue que vous avez choisie est entièrement assurée par la communauté",
   "settings.general.translation.acknowledgment": "Merci à eux pour leur contribution : ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Effacer",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Confirmer",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "Effacer le dernier",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "Phrase de secours incorrecte",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "{number} mots manquants",
   "wallet.restore.dialog.paperPasswordLabel": "Mot de passe du wallet papier",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "Confirmer le code PIN",
   "wallet.voting.dialog.registerLabel": "S'inscrire",
   "wallet.voting.dialog.step.confirm.line1": "Veuillez entrer le code PIN car vous en aurez besoin <strong>à chaque fois</strong> que vous voudrez accéder à l'application de vote Catalyst.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirmer que j'ai bien écrit le code PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirmer que j'ai bien écrit le code PIN",
   "wallet.voting.dialog.step.pin.line1": "Veuillez noter ce code PIN car vous en aurez besoin <strong>à chaque fois</strong> que vous voudrez accéder à l'application de vote Catalyst.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirmer que j'ai bien sauvegardé le QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirmer que j'ai bien sauvegardé le QR code",
   "wallet.voting.dialog.step.qr.line2": "Le code QR suivant est le certificat généré requis par l'application Catalyst pour pouvoir participer au processus de vote de Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Nous vous suggérons également de prendre une capture d'écran en guise de sauvegarde - vous ne pourrez pas accéder à ce code QR après avoir cliqué sur Terminer.",
   "wallet.voting.dialog.step.qr.lineTitle": "Utilisez l'application Catalyst Voting pour scanner le code QR",
