--- a/app/i18n/locales/id-ID.json
+++ b/app/i18n/locales/id-ID.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "Wallet yang Anda coba pulihkan sudah tersedia.",
   "api.errors.WalletFileImportError": "Wallet tidak bisa diimpor. Harap pastikan Anda memberikan file yang benar.",
   "api.errors.assetInfoApiError": "Error received from server while getting asset info.",
+  "api.errors.assetOverflowError": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "api.errors.checkAdressesInUseApiError": "Error dari server saat memeriksa address yang digunakan.",
   "api.errors.currentCoinPriceError": "Current coin price data not available now.",
   "api.errors.discoverAddressesError": "Kesalahan diterima dari metode pemanggilan API saat menemukan address.",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
   "buysell.dialog.title": "Buy / Sell ADA",
+  "connector.connect.connectedWallets": "Connected Wallets",
+  "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.settings.about": "About",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "Tidak ada transaksi untuk dikirim.",
   "daedalusTransfer.error.transferFundsError": "Transfer dana tidak berhasil.",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "Wallet Daedalus sedang dipulihkan",
   "daedalusTransfer.waiting.warning": "Ini mungkin akan memakan waktu lama atau akan gagal ketika koneksi internet buruk",
   "decryption.label": "Decryption password",
+  "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
+  "ergo-connector.connect.noWalletsFound": "No wallets found",
+  "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
+  "global.connector.connectedWebsites": "Connected Websites",
+  "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi Dapp Connector",
   "global.contact": "contact support",
   "global.copyTooltipMessage": "Disalin",
   "global.errors.fieldIsRequired": "Isian ini wajib diisi.",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "Undelegate",
   "global.label.addToAddressbook": "Add to address book",
   "global.label.allow": "Izinkan",
+  "global.label.assets": "assets",
   "global.label.choose": "Choose",
   "global.labels.LearnMore": "Pelajari lebih lanjut",
   "global.labels.addMemo": "Add memo",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Spending key",
   "global.labels.spendingKeyHash": "Spending key hash",
-  "global.labels.stakepool": "!!!Stakepool Name",
+  "global.labels.stakepool": "Stakepool Name",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "Versi kini:",
   "settings.general.aboutYoroi.website": "Website Yoroi",
   "settings.general.aboutYoroi.youtube": "Youtube EMURGO",
-  "settings.general.explorer": "Blockchain Explorer",
+  "settings.general.explorer": "explorer",
   "settings.general.languageSelect.info": "Bagi EMURGO, keramahan dalam Yoroi adalah sesuatu penting. Kami percaya bahwa memahami konsep blockchain lebih mudah dalam bahasa native Anda. Kami mencoba mendukung sebanyak mungkin bahasa, tetapi untuk pilihan bahasa yang lebih luas, kami perlu menerima bantuan dari komunitas penerjemah. Terjemahan bahasa yang dipilih sepenuhnya disediakan oleh komunitas.",
   "settings.general.languageSelect.labelInfo": "Terjemahan bahasa yang dipilih sepenuhnya disediakan oleh komunitas",
   "settings.general.translation.acknowledgment": "Terima kasih kepada mereka yang telah berkontribusi: ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Hapus",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Tetapkan",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "Hapus yang terakhir",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "Frase pemulihan tidak valid",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "{number} kata yang tersisa",
   "wallet.restore.dialog.paperPasswordLabel": "Kata sandi paper wallet",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "Confirm PIN",
   "wallet.voting.dialog.registerLabel": "Register",
   "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirm that I wrote down the PIN",
   "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirm that I saved the QR code",
   "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
