--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "De portemonnee die u probeert te herstellen bestaat al.",
   "api.errors.WalletFileImportError": "Portemonnee kan niet geïmporteerd worden. Gebruik het juiste bestand.",
   "api.errors.assetInfoApiError": "Fout ontvangen van server tijdens het ophalen van gegevens over bedrijfsmiddelen.",
+  "api.errors.assetOverflowError": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "api.errors.checkAdressesInUseApiError": "Serverfout geconstateerd bij het controleren van de gebruikte adressen.",
   "api.errors.currentCoinPriceError": "Actuele muntprijs is nu niet beschikbaar.",
   "api.errors.discoverAddressesError": "Foutmelding van de API methode bij het uitzoeken van de adressen.",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "Ik voeg mijn adres met de handmatig toe",
   "buysell.dialog.selectAddress": "Kies het ontvangende adres. Dit zal gedeeld worden met de derde partij genaamd \"Changelly\" voor het kopen / verkopen van ADA. ",
   "buysell.dialog.title": "Koop / Verkoop ADA",
+  "connector.connect.connectedWallets": "Connected Wallets",
+  "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.settings.about": "About",
   "crash.screen.title": "Yoroi is gecrashed",
   "daedalusTransfer.error.noTransferTxError": "Er is geen transactie om te versturen.",
   "daedalusTransfer.error.transferFundsError": "Het is niet mogelijk om fondsen te versturen.",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "De Daedalus portemonnee wordt hersteld",
   "daedalusTransfer.waiting.warning": "Dit kan lang duren of zelfs mislukken bij een slechte internetverbinding",
   "decryption.label": "Decoderingswachtwoord",
+  "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
+  "ergo-connector.connect.noWalletsFound": "No wallets found",
+  "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "U kunt onze {blogLink} lezen voor meer informatie.",
+  "global.connector.connectedWebsites": "Verbonden websites",
+  "global.connector.messageReadOnly": "U kunt utxos/addressen alleen bekijken.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi Dapp Connector",
   "global.contact": "Ondersteuningscontact",
   "global.copyTooltipMessage": "Gekopieerd",
   "global.errors.fieldIsRequired": "Verplicht veld.",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "Delegeren ongedaan maken",
   "global.label.addToAddressbook": "Toevoegen aan het adresboek",
   "global.label.allow": "Toestaan",
+  "global.label.assets": "bezittingen",
   "global.label.choose": "Kies",
   "global.labels.LearnMore": "Leer meer",
   "global.labels.addMemo": "Voeg memo toe",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Betaalsleutel",
   "global.labels.spendingKeyHash": "Vingerafdruk betaalsleutel",
-  "global.labels.stakepool": "!!!Naam van de Stakepool",
+  "global.labels.stakepool": "Stakepoolnaam",
   "global.labels.stakingKey": "Stemsleutel",
   "global.labels.stakingKeyHash": "Vingerafdruk stemsleutel",
   "global.labels.upgrade": "Opwaarderen",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "Huidige versie:",
   "settings.general.aboutYoroi.website": "Yoroi website",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
-  "settings.general.explorer": "Blockchain Analyse",
+  "settings.general.explorer": "onderzoeker",
   "settings.general.languageSelect.info": "Voor EMURGO is vriendelijkheid in Yoroi een belangrijk onderwerp. We geloven dat het begrijpen van blockchain-concepten gemakkelijker is in uw moedertaal. We proberen zoveel mogelijk talen te ondersteunen, maar voor een bredere selectie van talen moeten we de hulp van communityvertalers accepteren. De geselecteerde taalvertaling wordt volledig geleverd door de community.",
   "settings.general.languageSelect.labelInfo": "De gekozen taal is volledig verzorgd door leden van de gemeenschap",
   "settings.general.translation.acknowledgment": "We bedanken graag de volgende mensen voor hun bijdrage: ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Uitvegen",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Bevestigen",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "Verwijder het laatste",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "Foute herstelzin",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "{number} woorden te gaan",
   "wallet.restore.dialog.paperPasswordLabel": "Wachtwoord \"Papieren\" Portemonnee",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "Bevestig de pincode",
   "wallet.voting.dialog.registerLabel": "Registreer",
   "wallet.voting.dialog.step.confirm.line1": "Voer de pincode in, want u hebt deze <strong> elke keer </strong> nodig als u de Catalyst \"Stem\"-app wilt gebruiken.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Bevestig dat de pincode is opgeschreven",
+  "wallet.voting.dialog.step.pin.actionButton": "Bevestig dat de pincode is opgeschreven",
   "wallet.voting.dialog.step.pin.line1": "Schrijf deze pincode op, want u heeft deze <strong> elke keer </strong> nodig als u de Catalyst \"Stem\"-app wilt gebruiken.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Bevestig dat de QR-code bewaard wordt",
+  "wallet.voting.dialog.step.qr.actionButton": "Bevestig dat de QR-code bewaard wordt",
   "wallet.voting.dialog.step.qr.line2": "De volgende QR-code is het certificaat (gegenereerd) dat vereist is door de Catalyst Stem applicatie om te kunnen deelnemen aan het stemproces van Cardano.",
   "wallet.voting.dialog.step.qr.line3": "We raden aan om een screenshot van de QR-code te maken als back-up - je hebt geen toegang meer tot deze QR-code nadat je op Voltooien hebt geklikt.",
   "wallet.voting.dialog.step.qr.lineTitle": "Gebruik de Catalyst Stem applicatie om de QR-code te scannen",
