--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "您要恢复的钱包已存在。",
   "api.errors.WalletFileImportError": "钱包无法导入，请确保您提供的文件正确无误。",
   "api.errors.assetInfoApiError": "获取资产信息时从服务器收到错误。",
+  "api.errors.assetOverflowError": "单个UTXO中的token数量超过最大值（溢出）。",
   "api.errors.checkAdressesInUseApiError": "在检查使用的地址时从服务器收到错误。",
   "api.errors.currentCoinPriceError": "暂无当前币价。",
   "api.errors.discoverAddressesError": "从 api 方法调用查找地址时收到错误。",
@@ -31,7 +32,7 @@
   "api.errors.invalidMnemonicError": "无效助记词，请检查",
   "api.errors.invalidWitnessError": "签名无效。",
   "api.errors.noInputsError": "从恢复短语恢复的钱包是空的。 请先检查您的恢复短语，并再次尝试恢复。",
-  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
+  "api.errors.noOutputsError": "交易至少需要1个输出，但目前的交易没有输出",
   "api.errors.pendingTransactionError": "更新暂挂交易时发生错误。",
   "api.errors.poolMissingApiError": "找不到该权益池。再次检查ID，确保该权益池没有取消注册。",
   "api.errors.rewardAddressEmpty": "奖励地址是空的。",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "我会手动添加我的地址",
   "buysell.dialog.selectAddress": "请选择接收地址。该地址会分享给第三方服务商Changelly用于买卖ADA。 ",
   "buysell.dialog.title": "买/卖 ADA",
+  "connector.connect.connectedWallets": "已连接的钱包",
+  "connector.connect.noWebsitesConnected": "您尚未连接到任何网站",
+  "connector.settings.about": "关于",
   "crash.screen.title": "Yoroi意外终止",
   "daedalusTransfer.error.noTransferTxError": "没有要发送的交易。",
   "daedalusTransfer.error.transferFundsError": "无法转账。",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "正在恢复 Daedalus 钱包...",
   "daedalusTransfer.waiting.warning": "这会花费较长时间，网络不佳可能失败",
   "decryption.label": "解密密码",
+  "ergo-connector.connect.info": "你的连接设置会保存在Yoroi dApp列表中",
+  "ergo-connector.connect.noWalletsFound": "未找到钱包",
+  "ergo-connector.label.connect": "已连接",
+  "ergo-connector.label.selectAllWallets": "选择所有钱包",
   "global.blog.learnMore": "您可以阅读我们的{blogLink} 以了解更多。",
+  "global.connector.connectedWebsites": "已连接的网站",
+  "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi dApp连接器",
   "global.contact": "联系支持",
   "global.copyTooltipMessage": "已复制",
   "global.errors.fieldIsRequired": "该字段为必填字段。",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "取消委托",
   "global.label.addToAddressbook": "添加至地址簿",
   "global.label.allow": "允许",
+  "global.label.assets": "资产",
   "global.label.choose": "选择",
   "global.labels.LearnMore": "了解更多",
   "global.labels.addMemo": "添加备注",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "消费密钥",
   "global.labels.spendingKeyHash": "消费密钥Hash",
-  "global.labels.stakepool": "权益池名称！！！",
+  "global.labels.stakepool": "权益池名称",
   "global.labels.stakingKey": "委托密钥",
   "global.labels.stakingKeyHash": "委托密钥Hash",
   "global.labels.upgrade": "升级",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "当前版本:",
   "settings.general.aboutYoroi.website": "Yoroi网站",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
-  "settings.general.explorer": "区块链浏览器",
+  "settings.general.explorer": "浏览器",
   "settings.general.languageSelect.info": "对EMURGO而言，友好的Yoroi钱包是永恒的主题。我们坚信用您的母语会让理解区块链概念更加容易。 我们尝试尽可能支持更多的语言，但为了支持更多的语言，我们需要接受来自社区翻译的帮助。您所选的语言翻译完全由社区提供。",
   "settings.general.languageSelect.labelInfo": "所选的语言翻译由社区志愿者提供",
   "settings.general.translation.acknowledgment": "感谢下列人员做出的贡献： ",
@@ -492,7 +505,7 @@
   "wallet.dashboard.summary.note": "比预期少",
   "wallet.dashboard.summary.rewardsTitle": "收益总量",
   "wallet.dashboard.summary.title": "你的总览",
-  "wallet.dashboard.upcomingRewards.at": "的",
+  "wallet.dashboard.upcomingRewards.at": " ",
   "wallet.dashboard.upcomingRewards.delegatedTitle": "已委托的权益池",
   "wallet.dashboard.upcomingRewards.endOfEpoch": "时代结束",
   "wallet.dashboard.upcomingRewards.noRewards": "当前时代将没有任何奖励",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "清除",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "确认",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "移除最后一个",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "助记词无效",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "剩余 {number} 个单词",
   "wallet.restore.dialog.paperPasswordLabel": "纸钱包密码",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "确认PIN",
   "wallet.voting.dialog.registerLabel": "注册",
   "wallet.voting.dialog.step.confirm.line1": "请输入PIN码，之后<strong>每次</strong>使用Catalyst投票应用都需要使用。",
-  "wallet.voting.dialog.step.pin.actionButton": "确认我已记下PIN码！！！",
+  "wallet.voting.dialog.step.pin.actionButton": "确认我已记下PIN码",
   "wallet.voting.dialog.step.pin.line1": "请写下PIN码，之后<strong>每次</strong>使用Catalyst投票应用都需要使用。",
-  "wallet.voting.dialog.step.qr.actionButton": "确认我已保存了二维码！！！",
+  "wallet.voting.dialog.step.qr.actionButton": "确认我已保存了二维码",
   "wallet.voting.dialog.step.qr.line2": "下方的二维码是Catalyst应用需要的证书，能够用于在Cardano网络上参与投票。",
   "wallet.voting.dialog.step.qr.line3": "此外我们建议您截图作为备份 - 在点击完成后你无法再次获得该二维码。",
   "wallet.voting.dialog.step.qr.lineTitle": "使用Catalyst投票应用扫描此二维码",
