--- a/app/i18n/locales/cs-CZ.json
+++ b/app/i18n/locales/cs-CZ.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "Peněženka, kterou se snažíte obnovit, již existuje.",
   "api.errors.WalletFileImportError": "Peněženku nelze importovat. Ujistěte se, že zadáváte správný soubor.",
   "api.errors.assetInfoApiError": "Error received from server while getting asset info.",
+  "api.errors.assetOverflowError": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "api.errors.checkAdressesInUseApiError": "Při kontrole použitých adres se ze serveru vrátila chyba.",
   "api.errors.currentCoinPriceError": "Aktuální údaje o cenách mincí nejsou momentálně k dispozici.",
   "api.errors.discoverAddressesError": "Při objevování adres došlo k chybě ve metody API.",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
   "buysell.dialog.title": "Buy / Sell ADA",
+  "connector.connect.connectedWallets": "Connected Wallets",
+  "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.settings.about": "About",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "There is no transaction to be sent.",
   "daedalusTransfer.error.transferFundsError": "Unable to transfer funds.",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "Daedalus wallet is being restored",
   "daedalusTransfer.waiting.warning": "This may take a long time or fail on poor internet connections",
   "decryption.label": "Decryption password",
+  "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
+  "ergo-connector.connect.noWalletsFound": "No wallets found",
+  "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
+  "global.connector.connectedWebsites": "Connected Websites",
+  "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi Dapp Connector",
   "global.contact": "contact support",
   "global.copyTooltipMessage": "Copied",
   "global.errors.fieldIsRequired": "This field is required.",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "Undelegate",
   "global.label.addToAddressbook": "Add to address book",
   "global.label.allow": "Allow",
+  "global.label.assets": "assets",
   "global.label.choose": "Choose",
   "global.labels.LearnMore": "Learn more",
   "global.labels.addMemo": "Add memo",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Spending key",
   "global.labels.spendingKeyHash": "Spending key hash",
-  "global.labels.stakepool": "!!!Stakepool Name",
+  "global.labels.stakepool": "Stakepool Name",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "Current version:",
   "settings.general.aboutYoroi.website": "Yoroi website",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
-  "settings.general.explorer": "Blockchain Explorer",
+  "settings.general.explorer": "explorer",
   "settings.general.languageSelect.info": "For EMURGO, friendliness in Yoroi is an important topic. We believe understanding blockchain concepts is easier in your native language. We try supporting as many languages as possible, but for a broader selection of languages we need to accept the help from community translators. The selected language translation is fully provided by the community.",
   "settings.general.languageSelect.labelInfo": "The selected language translation is fully provided by the community",
   "settings.general.translation.acknowledgment": "Thank you to the following for their contribution: ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Clear",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Confirm",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "Remove last",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "Invalid recovery phrase",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "{number} words left",
   "wallet.restore.dialog.paperPasswordLabel": "Paper wallet password",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "Confirm PIN",
   "wallet.voting.dialog.registerLabel": "Register",
   "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirm that I wrote down the PIN",
   "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirm that I saved the QR code",
   "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
