--- a/app/i18n/locales/el-GR.json
+++ b/app/i18n/locales/el-GR.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "Το πορτοφόλι που προσπαθείτε να επαναφέρετε υπάρχει ήδη.",
   "api.errors.WalletFileImportError": "Το πορτοφόλι δεν μπόρεσε να εισαχθεί. Παρακαλω επιβεβαιώστε ότι παρέχετε το σωστό αρχείο.",
   "api.errors.assetInfoApiError": "Error received from server while getting asset info.",
+  "api.errors.assetOverflowError": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "api.errors.checkAdressesInUseApiError": "Παρελήφθη σφάλμα από τον διακομιστή καθώς γινόταν έλεγχος στις χρησιμοποιημένες διευθύνσεις.",
   "api.errors.currentCoinPriceError": "Τα δεδομένα της τρέχουσας τιμής του νομίσματος, δεν είναι διαθέσιμα αυτή τη στιγμή.",
   "api.errors.discoverAddressesError": "Παρελήφθη σφάλμα στη κλήση μεθόδου ΔΠΕ (Διεπαφή προγραμματισμού εφαρμογών), τη στιγμή ανακάλυψης διευθύνσεων.",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
   "buysell.dialog.title": "Buy / Sell ADA",
+  "connector.connect.connectedWallets": "Connected Wallets",
+  "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.settings.about": "About",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "Δεν υπάρχει καμία συναλλαγή προς αποστολή.",
   "daedalusTransfer.error.transferFundsError": "Αδυναμία μεταφοράς χρημάτων.",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "Γίνεται επαναφορά του πορτοφολιού Daedalus",
   "daedalusTransfer.waiting.warning": "Αυτό ίσως χρειαστεί αρκετή ώρα ή ίσως αποτύχει σε περιπτώσεις κακής σύνδεσης στο διαδίκτυο",
   "decryption.label": "Decryption password",
+  "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
+  "ergo-connector.connect.noWalletsFound": "No wallets found",
+  "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
+  "global.connector.connectedWebsites": "Connected Websites",
+  "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi Dapp Connector",
   "global.contact": "επικοινωνήστε με την υποστήριξη",
   "global.copyTooltipMessage": "Αντιγράφηκε",
   "global.errors.fieldIsRequired": "Αυτό το πεδίο είναι απαραίτητο.",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "Undelegate",
   "global.label.addToAddressbook": "Προσθήκη στο βιβλίο διευθύνσεων",
   "global.label.allow": "Επιτρέψτε",
+  "global.label.assets": "assets",
   "global.label.choose": "Διαλέξτε",
   "global.labels.LearnMore": "Μάθετε περισσότερα",
   "global.labels.addMemo": "Προσθήκη υπομνήματος",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Spending key",
   "global.labels.spendingKeyHash": "Spending key hash",
-  "global.labels.stakepool": "!!!Stakepool Name",
+  "global.labels.stakepool": "Stakepool Name",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Αναβάθμιση",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "Τρέχουσα έκδοση:",
   "settings.general.aboutYoroi.website": "Ιστότοπος Yoroi",
   "settings.general.aboutYoroi.youtube": "EMURGO Youtube",
-  "settings.general.explorer": "Εξερευνητής αλυσίδας των μπλοκ",
+  "settings.general.explorer": "explorer",
   "settings.general.languageSelect.info": "Για την EMURGO, το φιλικό περιβάλλον στο Yoroi ειναι ενα σημαντικό θέμα. Πιστεύουμε πως η κατανόηση ιδεών της αλυσίδας των μπλοκ είναι ευκολότερη στη μητρική σας γλώσσα. Προσπαθούμε να υποστηρίξουμε όσες περισσότερες γλώσσες είναι δυνατόν, αλλά για μία ευρύτερη επιλογή από γλώσσες χρειάζεται να αποδεχτούμε τη βοήθεια από μεταφραστές της κοινότητας. Η επιλεγμένη γλώσσα μετάφρασης παρέχεται πλήρως από την κοινότητα.",
   "settings.general.languageSelect.labelInfo": "Η επιλεγμένη γλώσσα μετάφρασης παρέχεται πλήρως από την κοινότητα",
   "settings.general.translation.acknowledgment": "Ευχαριστούμε τους κάτωθι για την προσφορά τους: ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Καθαρισμός",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Επιβεβαίωση",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "Αφαίρεση τελευταίου",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "Μη ισχύουσα φράση ανάκτησης",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "{number} λέξεις απομείναν",
   "wallet.restore.dialog.paperPasswordLabel": "Κωδικός Έντυπου Πορτοφολιού",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "Confirm PIN",
   "wallet.voting.dialog.registerLabel": "Register",
   "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirm that I wrote down the PIN",
   "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirm that I saved the QR code",
   "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
