--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "La billetera que estás intentando restaurar ya existe.",
   "api.errors.WalletFileImportError": "La billetera no pudo ser importada. Por favor, asegúrate de estar proporcionando el archivo correcto.",
   "api.errors.assetInfoApiError": "Error recibido del servidor mientras se obtiene la información de los activos.",
+  "api.errors.assetOverflowError": "Valor máximo de un token dentro de un UTXO superado ( desborde).",
   "api.errors.checkAdressesInUseApiError": "Error recibido del servidor al comprobar las direcciones usadas.",
   "api.errors.currentCoinPriceError": "Los datos sobre el precio de la moneda no están disponibles en este momento.",
   "api.errors.discoverAddressesError": "Error recibido de la llamada a la API al intentar descubrir las direcciones.",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "Añadiré mi dirección manualmente",
   "buysell.dialog.selectAddress": "Por favor, seleccione la dirección de recepción. Esto será compartido con el proveedor de terceros llamado Changelly para la compra / venta de ADA. ",
   "buysell.dialog.title": "Comprar / Vender ADA",
+  "connector.connect.connectedWallets": "Billeteras conectadas",
+  "connector.connect.noWebsitesConnected": "Todavía no tienes ninguna página web conectada",
+  "connector.settings.about": "Acerca",
   "crash.screen.title": "Yoroi se ha caído",
   "daedalusTransfer.error.noTransferTxError": "No hay ninguna transacción para ser enviada.",
   "daedalusTransfer.error.transferFundsError": "No se pudieron transferir los fondos.",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "La billetera de Daedalus está siendo restaurada",
   "daedalusTransfer.waiting.warning": "Esto puede tomar algo de tiempo (o fallar) si la conexión a Internet es deficiente",
   "decryption.label": "Contraseña de descifrado",
+  "ergo-connector.connect.info": "Tus preferencias de conexión se guardarán en tu lista de dApps de Yoroi.",
+  "ergo-connector.connect.noWalletsFound": "Ninguna billetera encontrada",
+  "ergo-connector.label.connect": "Conectarse a",
+  "ergo-connector.label.selectAllWallets": "Seleccionar todas las billeteras",
   "global.blog.learnMore": "Puedes leer nuestro {blogLink} para conocer más.",
+  "global.connector.connectedWebsites": "Páginas web conectadas",
+  "global.connector.messageReadOnly": "Estamos concediendo solo permiso de lectura para ver utxos/direcciones.",
+  "global.connector.poweredByErgo": "Impulsado por Ergo",
+  "global.connector.yoroiDappConnector": "Conector de Dapp Yoroi",
   "global.contact": "contactar con el soporte",
   "global.copyTooltipMessage": "Copiado",
   "global.errors.fieldIsRequired": "Este campo es obligatorio.",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "Des-delegar",
   "global.label.addToAddressbook": "Añadir a la libreta de direcciones",
   "global.label.allow": "Permitir",
+  "global.label.assets": "assets",
   "global.label.choose": "Elige",
   "global.labels.LearnMore": "Aprende más",
   "global.labels.addMemo": "Añadir memo",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Clave de gastos",
   "global.labels.spendingKeyHash": "Hash de la clave de gastos",
-  "global.labels.stakepool": "!!!Stakepool Name",
+  "global.labels.stakepool": "Nombre del stakepool",
   "global.labels.stakingKey": "Clave de delegación",
   "global.labels.stakingKeyHash": "Hash de la clave de delegación",
   "global.labels.upgrade": "Actualización",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "Versión actual:",
   "settings.general.aboutYoroi.website": "Sitio web de Yoroi",
   "settings.general.aboutYoroi.youtube": "EMURGO en YouTube",
-  "settings.general.explorer": "Explorador de la Blockchain",
+  "settings.general.explorer": "explorador",
   "settings.general.languageSelect.info": "Para EMURGO, la familiaridad en Yoroi es un tema importante. Creemos que entender los conceptos de la blockchain es más fácil en tu idioma nativo. Intentamos apoyar tantos idiomas como sea posible, pero para una selección más amplia de idiomas necesitamos aceptar la ayuda de traductores de la comunidad. La traducción del idioma seleccionado es proporcionada en su totalidad por la comunidad.",
   "settings.general.languageSelect.labelInfo": "La traducción del idioma elegido es proporcionada en su totalidad por la comunidad",
   "settings.general.translation.acknowledgment": "Gracias a los siguientes miembros por su contribución: ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Limpiar",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Confirmar",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "Remover última",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "Frase de recuperación inválida",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "{number} palabras restantes",
   "wallet.restore.dialog.paperPasswordLabel": "Contraseña de la billetera de papel",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "Confirmar PIN",
   "wallet.voting.dialog.registerLabel": "Inscribirse",
   "wallet.voting.dialog.step.confirm.line1": "Introduce el PIN, ya que lo necesitarás <strong>cada vez</strong> que quieras acceder a la aplicación Catalyst Voting.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirmar que anoté el PIN",
   "wallet.voting.dialog.step.pin.line1": "Por favor, anota este PIN, ya que lo necesitarás <strong>cada vez</strong> que quieras acceder a la aplicación Catalyst Voting.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirmar que he guardado el código QR",
   "wallet.voting.dialog.step.qr.line2": "El siguiente código QR es el certificado generado que requiere la Catalyst App para poder participar en el proceso de votación de Cardano.",
   "wallet.voting.dialog.step.qr.line3": "También te sugerimos que hagas una captura de pantalla como copia de seguridad - no podrás acceder a este código QR después de hacer clic en Completar.",
   "wallet.voting.dialog.step.qr.lineTitle": "Utilice la aplicación Catalyst Voting para escanear el código QR",
