--- a/app/i18n/locales/ja-JP.json
+++ b/app/i18n/locales/ja-JP.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "復元しようとしたウォレットは既に存在しています。",
   "api.errors.WalletFileImportError": "ウォレットをインポートできませんでした。ファイルが正しいかご確認ください。",
   "api.errors.assetInfoApiError": "Error received from server while getting asset info.",
+  "api.errors.assetOverflowError": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "api.errors.checkAdressesInUseApiError": "使用されたアドレスのチェック中にサーバーからエラーを受信しました。",
   "api.errors.currentCoinPriceError": "現在のコインの価格データにアクセスできません。",
   "api.errors.discoverAddressesError": "アドレスの検出中にAPI方式呼び出しからエラーを受信しました。",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
   "buysell.dialog.title": "Buy / Sell ADA",
+  "connector.connect.connectedWallets": "Connected Wallets",
+  "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.settings.about": "About",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "送信するトランザクションはありません。",
   "daedalusTransfer.error.transferFundsError": "送金できません。",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "ダイダロスウォレットを復元中です...",
   "daedalusTransfer.waiting.warning": "ネットワーク環境が不安定の場合は時間がかかる場合があります",
   "decryption.label": "Decryption password",
+  "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
+  "ergo-connector.connect.noWalletsFound": "No wallets found",
+  "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
+  "global.connector.connectedWebsites": "Connected Websites",
+  "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi Dapp Connector",
   "global.contact": "サポートにお問い合わせください。",
   "global.copyTooltipMessage": "コピーされました",
   "global.errors.fieldIsRequired": "この項目は必須です。",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "委任を解除する",
   "global.label.addToAddressbook": "アドレス帳に追加",
   "global.label.allow": "承諾",
+  "global.label.assets": "assets",
   "global.label.choose": "選択してください",
   "global.labels.LearnMore": "もっと詳しく見る",
   "global.labels.addMemo": "メモを追加",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Spending key",
   "global.labels.spendingKeyHash": "Spending key hash",
-  "global.labels.stakepool": "!!!Stakepool Name",
+  "global.labels.stakepool": "Stakepool Name",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "アップグレード",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "現在のバージョン：",
   "settings.general.aboutYoroi.website": "ヨロイ Webサイト",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
-  "settings.general.explorer": "ブロックチェーンエキスプローラ",
+  "settings.general.explorer": "explorer",
   "settings.general.languageSelect.info": "ヨロイがユーザーにとって親しみやすいインターフェイスを持つことは重要だと、EMURGOは考えています。ユーザーの母国語であれば、ブロックチェーンの概念を理解するのもより容易になるはずです。EMURGOは出来る限り多くの言語をサポートしようとしていますが、多数の言語のサポートにはコミュニティの翻訳者の協力が必要です。サポートする言語の翻訳は、コミュニティにより提供されています。",
   "settings.general.languageSelect.labelInfo": "選択された言語はコミュニティーによって翻訳された内容になります",
   "settings.general.translation.acknowledgment": "以下の方の貢献を感謝しております。",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "クリア",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "確認",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "１つ削除",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "復元フレーズが無効です",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "あと{number}単語",
   "wallet.restore.dialog.paperPasswordLabel": "ペーパーウォレットのパスワード",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "Confirm PIN",
   "wallet.voting.dialog.registerLabel": "Register",
   "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirm that I wrote down the PIN",
   "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirm that I saved the QR code",
   "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
