--- a/app/i18n/locales/ko-KR.json
+++ b/app/i18n/locales/ko-KR.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "복원하려는 지갑이 이미 존재합니다.",
   "api.errors.WalletFileImportError": "지갑을 가져올 수 없습니다. 올바른 파일을 제공하였는지 확인하세요.",
   "api.errors.assetInfoApiError": "Error received from server while getting asset info.",
+  "api.errors.assetOverflowError": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "api.errors.checkAdressesInUseApiError": "사용한 주소를 확인하는 중 서버로부터 오류를 수신했습니다.",
   "api.errors.currentCoinPriceError": "실시간 가격 데이터 조회는 아직 지원되지 않습니다.",
   "api.errors.discoverAddressesError": "주소를 검색 중 API 호출에 오류가 발생하였습니다.",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
   "buysell.dialog.title": "Buy / Sell ADA",
+  "connector.connect.connectedWallets": "Connected Wallets",
+  "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.settings.about": "About",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "전송할 거래가 없습니다.",
   "daedalusTransfer.error.transferFundsError": "자금을 이체할 수 없습니다.",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "Daedalus 지갑 복원 중...",
   "daedalusTransfer.waiting.warning": "이것은 인터넷 연결이 좋지 않을 경우 시간이 오래 걸리거나 실패할 수 있습니다.",
   "decryption.label": "Decryption password",
+  "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
+  "ergo-connector.connect.noWalletsFound": "No wallets found",
+  "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
+  "global.connector.connectedWebsites": "Connected Websites",
+  "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi Dapp Connector",
   "global.contact": "지원 요청하기",
   "global.copyTooltipMessage": "복사됨",
   "global.errors.fieldIsRequired": "이 필드는 필수입니다.",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "위임 취소",
   "global.label.addToAddressbook": "Add to address book",
   "global.label.allow": "허용",
+  "global.label.assets": "assets",
   "global.label.choose": "Choose",
   "global.labels.LearnMore": "더 알아보기",
   "global.labels.addMemo": "메모 추가",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Spending key",
   "global.labels.spendingKeyHash": "Spending key hash",
-  "global.labels.stakepool": "!!!Stakepool Name",
+  "global.labels.stakepool": "Stakepool Name",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "현재 버전:",
   "settings.general.aboutYoroi.website": "요로이 웹사이트",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
-  "settings.general.explorer": "블록체인 탐색기",
+  "settings.general.explorer": "explorer",
   "settings.general.languageSelect.info": "EMURGO는 Yoroi 지갑의 사용자 친화성을 아주 중요하게 생각합니다. 블록체인의 개념들을 모국어로 이해하는 것이 훨씬 수월하기 때문입니다. 우리는 최대한 많은 언어 지원을 하고자 하지만, 이를 위해서는 커뮤니티의 번역가들의 도움이 필요합니다. 선택된 언어에 대한 번역은 모두 커뮤니티에 의해서 제공되었습니다.",
   "settings.general.languageSelect.labelInfo": "선택된 언어에 대한 번역은 모두 커뮤니티에 의해 제공됩니다.",
   "settings.general.translation.acknowledgment": "번역을 제공해 주신 분들에게 감사를 표합니다: ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "지우기",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "확인",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "마지막 단어를 제거하세요.",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "잘못된 복구 구절",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "{number} 단어 남음",
   "wallet.restore.dialog.paperPasswordLabel": "종이 지갑 암호",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "Confirm PIN",
   "wallet.voting.dialog.registerLabel": "Register",
   "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirm that I wrote down the PIN",
   "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirm that I saved the QR code",
   "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
