--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "A carteira que você está tentando restaurar já existe.",
   "api.errors.WalletFileImportError": "A carteira não pode ser importada. Por favor, verifique se você está fornecendo o arquivo correto.",
   "api.errors.assetInfoApiError": "Error received from server while getting asset info.",
+  "api.errors.assetOverflowError": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "api.errors.checkAdressesInUseApiError": "Erro recebido do servidor durante a verificação dos endereços usados.",
   "api.errors.currentCoinPriceError": "Dados atuais sobre preços de moedas não estão disponíveis agora.",
   "api.errors.discoverAddressesError": "Erro recebido da chamada do método da API ao descobrir endereços.",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
   "buysell.dialog.title": "Buy / Sell ADA",
+  "connector.connect.connectedWallets": "Connected Wallets",
+  "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.settings.about": "About",
   "crash.screen.title": "Yoroi travou",
   "daedalusTransfer.error.noTransferTxError": "Não há transação a ser enviada.",
   "daedalusTransfer.error.transferFundsError": "Não é possível transferir fundos.",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "Carteira Daedalus está sendo restaurada",
   "daedalusTransfer.waiting.warning": "Isso pode levar muito tempo ou falhar em conexões de baixa qualidade",
   "decryption.label": "Senha de decifração",
+  "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
+  "ergo-connector.connect.noWalletsFound": "No wallets found",
+  "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "Você pode ler nosso {blogLink} para saber mais.",
+  "global.connector.connectedWebsites": "Connected Websites",
+  "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi Dapp Connector",
   "global.contact": "Contate o suporte",
   "global.copyTooltipMessage": "Copiado",
   "global.errors.fieldIsRequired": "Este campo é obrigatório.",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "Remover delegação",
   "global.label.addToAddressbook": "Adicionar ao livro de endereços",
   "global.label.allow": "Permitir",
+  "global.label.assets": "assets",
   "global.label.choose": "Escolha",
   "global.labels.LearnMore": "Saiba mais",
   "global.labels.addMemo": "Adicionar nota",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Chave de gasto",
   "global.labels.spendingKeyHash": "Hash da chave de gasto",
-  "global.labels.stakepool": "!!!Stakepool Name",
+  "global.labels.stakepool": "Stakepool Name",
   "global.labels.stakingKey": "Chave de Stake",
   "global.labels.stakingKeyHash": "Hash da chave de Stake",
   "global.labels.upgrade": "Upgrade",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "Versão atual:",
   "settings.general.aboutYoroi.website": "Yoroi website",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
-  "settings.general.explorer": "Blockchain Explorer",
+  "settings.general.explorer": "explorer",
   "settings.general.languageSelect.info": "Para a Emurgo, fornecer suporte na Yoroi Wallet é um tópico importantíssimo. Nós acreditamos que entender os conceitos da tecnologia blockchain é mais simples em sua língua nativa. Nos esforçamos para disponibilizar tantas línguas quanto for possível, e para alcançar esse objetivo contamos com a ajuda de tradutores voluntários. A tradução da língua selecionada foi completamente feita pela comunidade.",
   "settings.general.languageSelect.labelInfo": "A tradução da língua selecionada foi totalmente realizada pela comunidade",
   "settings.general.translation.acknowledgment": "Agradecemos aos seguintes pela contribuição: ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Limpar",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Confirmar",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "Remover último",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "Frase de recuperação inválida",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "{number} palavras restantes",
   "wallet.restore.dialog.paperPasswordLabel": "Senha da carteira de papel",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "Confirm PIN",
   "wallet.voting.dialog.registerLabel": "Register",
   "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirm that I wrote down the PIN",
   "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirm that I saved the QR code",
   "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
