--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "Кошелек, который Вы пытаетесь восстановить, уже существует.",
   "api.errors.WalletFileImportError": "Кошелек не может быть импортирован, пожалуйста, убедитесь, что Вы предоставляете правильный файл.",
   "api.errors.assetInfoApiError": "Error received from server while getting asset info.",
+  "api.errors.assetOverflowError": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "api.errors.checkAdressesInUseApiError": "Получена ошибка от сервера при проверки используемых адресов.",
   "api.errors.currentCoinPriceError": "Current coin price data not available now.",
   "api.errors.discoverAddressesError": "Получена ошибка при вызове метода API во время обнаружения адресов.",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
   "buysell.dialog.title": "Buy / Sell ADA",
+  "connector.connect.connectedWallets": "Connected Wallets",
+  "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.settings.about": "About",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "Нет транзакций для отправки.",
   "daedalusTransfer.error.transferFundsError": "Не удается перевести средства.",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "Кошелек Daedalus восстанавливается",
   "daedalusTransfer.waiting.warning": "Это может занять много времени или потерпеть неудачу при плохом интернет-соединении",
   "decryption.label": "Decryption password",
+  "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
+  "ergo-connector.connect.noWalletsFound": "No wallets found",
+  "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
+  "global.connector.connectedWebsites": "Connected Websites",
+  "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi Dapp Connector",
   "global.contact": "связаться со службой поддержки",
   "global.copyTooltipMessage": "Скопировано",
   "global.errors.fieldIsRequired": "Это поле обязательно к заполнению.",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "Разделегировать",
   "global.label.addToAddressbook": "Add to address book",
   "global.label.allow": "Разрешить",
+  "global.label.assets": "assets",
   "global.label.choose": "Choose",
   "global.labels.LearnMore": "Узнать больше",
   "global.labels.addMemo": "Добавить заметку",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Spending key",
   "global.labels.spendingKeyHash": "Spending key hash",
-  "global.labels.stakepool": "!!!Stakepool Name",
+  "global.labels.stakepool": "Stakepool Name",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "Текущая версия:",
   "settings.general.aboutYoroi.website": "Сайт кошелька Yoroi",
   "settings.general.aboutYoroi.youtube": "Видео-канал Emurgo",
-  "settings.general.explorer": "Blockchain Explorer",
+  "settings.general.explorer": "explorer",
   "settings.general.languageSelect.info": "Для EMURGO дружелюбие в Yoroi является важной темой. Мы считаем, что понимание концепций блокчейна дается легче на Вашем родном языке. Мы стараемся поддерживать как можно больше языков, но для более широкого выбора языков нам нужно принимать помощь от переводчиков сообщества. Выбранный языковой перевод полностью предоставлен сообществом.",
   "settings.general.languageSelect.labelInfo": "Выбранный языковой перевод полностью предоставлен сообществом",
   "settings.general.translation.acknowledgment": "Выражаем благодарность следующим участникам за их вклад: ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Очистить",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Подтвердить",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "Удалить последний",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "Неверная фраза восстановления",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "количество оставшихся слов {number} ",
   "wallet.restore.dialog.paperPasswordLabel": "Пароль бумажного кошелька",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "Confirm PIN",
   "wallet.voting.dialog.registerLabel": "Register",
   "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirm that I wrote down the PIN",
   "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirm that I saved the QR code",
   "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
