--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "Yeniden yüklemeye çalıştığınız cüzdan zaten mevcut.",
   "api.errors.WalletFileImportError": "Cüzdan içeri aktarılamadı. Lütfen doğru dosyayı girdiğinizden emin olun.",
   "api.errors.assetInfoApiError": "Varlık bilgisi alınırken sunucudan hata alındı.",
+  "api.errors.assetOverflowError": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "api.errors.checkAdressesInUseApiError": "Kullanılan adresler kontrol edilirken sunucudan hata alındı.",
   "api.errors.currentCoinPriceError": "Geçerli kripto para fiyat verileri şu anda mevcut değil.",
   "api.errors.discoverAddressesError": "Adresler keşfedilirken API çağrı yönteminden hata alındı.",
@@ -47,11 +48,14 @@
   "app.errors.unableToLoad": "Yüklenemedi!",
   "app.errors.unexpectedError": "Beklenmedik bir şey oldu. Lütfen tekrar deneyiniz.",
   "app.errors.unknowError": "Bilinmeyen hata.",
-  "button.buySellAda": "Buy / Sell ADA",
+  "button.buySellAda": "Al / Sat ADA",
   "buysell.dialog.instructions": "Please select your preferences. On the next screen, confirm your selection by pressing the green arrow on the top right",
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
-  "buysell.dialog.title": "Buy / Sell ADA",
+  "buysell.dialog.title": "Al / Sat ADA",
+  "connector.connect.connectedWallets": "Connected Wallets",
+  "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.settings.about": "About",
   "crash.screen.title": "Yoroi çöktü",
   "daedalusTransfer.error.noTransferTxError": "Gönderilecek işlem yok.",
   "daedalusTransfer.error.transferFundsError": "Para aktarılamıyor.",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "Daedalus cüzdanı geri yükleniyor",
   "daedalusTransfer.waiting.warning": "Bu, zayıf internet bağlantısıyla uzun zaman alabilir veya başarısız olabilir",
   "decryption.label": "Şifre çözme şifresi",
+  "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
+  "ergo-connector.connect.noWalletsFound": "No wallets found",
+  "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "Daha fazla bilgi edinmek için {blogLink} sayfasına bakabilirsiniz.",
+  "global.connector.connectedWebsites": "Connected Websites",
+  "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi Dapp Connector",
   "global.contact": "iletişim desteği 2",
   "global.copyTooltipMessage": "Kopyalandı",
   "global.errors.fieldIsRequired": "Girilmesi gerekli alan.",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "Yetkilendirilmemiş",
   "global.label.addToAddressbook": "Adres defterine ekle",
   "global.label.allow": "İzin Ver",
+  "global.label.assets": "assets",
   "global.label.choose": "Seç",
   "global.labels.LearnMore": "Daha fazla bilgi",
   "global.labels.addMemo": "Memo ekle",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Harcama anahtarı",
   "global.labels.spendingKeyHash": "Harcama anahtarı hash'i",
-  "global.labels.stakepool": "!!!Stake Havuz Adı",
+  "global.labels.stakepool": "Stakepool Name",
   "global.labels.stakingKey": "Staking anahtarı",
   "global.labels.stakingKeyHash": "Staking anahtarı hash'i",
   "global.labels.upgrade": "Yükselt",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "Geçerli sürüm:",
   "settings.general.aboutYoroi.website": "Yoroi web sitesi",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
-  "settings.general.explorer": "Blockchain Gezgini",
+  "settings.general.explorer": "explorer",
   "settings.general.languageSelect.info": "EMURGO için Yoroi'de ki dostluk önemli bir konudur. Ana diliniz de blokzincir kavramlarını anlamanın daha kolay olduğuna inanıyoruz. Mümkün olduğunca çok dili desteklemeye çalışıyoruz ancak daha geniş bir dil yelpazesi için yerel çevirmenlerinin yardımını kabul etmeliyiz. Seçilen dilde ki çeviri bu çevirmenler tarafından eksiksiz bir şekilde gerçekleştirilir.",
   "settings.general.languageSelect.labelInfo": "Seçilen dil çevirisi topluluk tarafından eksiksiz bir şekilde sağlanır",
   "settings.general.translation.acknowledgment": "Katkılarından dolayı aşağıdakilere teşekkür ederiz: ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Temizle",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Onayla",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "Son ekleneni sil",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "Geçersiz kurtarma sözcükleri",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "{number} sözcük kaldı",
   "wallet.restore.dialog.paperPasswordLabel": "Kağıt cüzdan şifresi",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "PİN'İ Onayla",
   "wallet.voting.dialog.registerLabel": "Kaydet",
   "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirm that I wrote down the PIN",
   "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirm that I saved the QR code",
   "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
