--- a/app/i18n/locales/zh-Hant.json
+++ b/app/i18n/locales/zh-Hant.json
@@ -9,6 +9,7 @@
   "api.errors.WalletAlreadyRestoredError": "您嘗試還原的錢包已存在。",
   "api.errors.WalletFileImportError": "無法匯入錢包，請確保您提供的檔案正確無誤。",
   "api.errors.assetInfoApiError": "Error received from server while getting asset info.",
+  "api.errors.assetOverflowError": "Maximum value of a token inside a UTXO exceeded (overflow).",
   "api.errors.checkAdressesInUseApiError": "檢查已使用地址時出現伺服器錯誤。",
   "api.errors.currentCoinPriceError": "Current coin price data not available now.",
   "api.errors.discoverAddressesError": "查找地址時發現 api 方法錯誤。",
@@ -52,6 +53,9 @@
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
   "buysell.dialog.title": "Buy / Sell ADA",
+  "connector.connect.connectedWallets": "Connected Wallets",
+  "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.settings.about": "About",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "無交易傳送。",
   "daedalusTransfer.error.transferFundsError": "無法轉移資金。",
@@ -70,7 +74,15 @@
   "daedalusTransfer.waiting.title.label": "正在還原 Daedalus 錢包...",
   "daedalusTransfer.waiting.warning": "這可能需要很長時間，或在互聯網連接不良時失敗",
   "decryption.label": "Decryption password",
+  "ergo-connector.connect.info": "Your connection preferences will be saved to your Yoroi dApp list.",
+  "ergo-connector.connect.noWalletsFound": "No wallets found",
+  "ergo-connector.label.connect": "Connect to",
+  "ergo-connector.label.selectAllWallets": "Select all wallets",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
+  "global.connector.connectedWebsites": "Connected Websites",
+  "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
+  "global.connector.poweredByErgo": "Powered by Ergo",
+  "global.connector.yoroiDappConnector": "Yoroi Dapp Connector",
   "global.contact": "聯繫支援",
   "global.copyTooltipMessage": "已複製",
   "global.errors.fieldIsRequired": "此欄位為必填欄。",
@@ -87,6 +99,7 @@
   "global.labael.undelegate": "Undelegate",
   "global.label.addToAddressbook": "Add to address book",
   "global.label.allow": "允許",
+  "global.label.assets": "assets",
   "global.label.choose": "Choose",
   "global.labels.LearnMore": "了解更多",
   "global.labels.addMemo": "Add memo",
@@ -120,7 +133,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Spending key",
   "global.labels.spendingKeyHash": "Spending key hash",
-  "global.labels.stakepool": "!!!Stakepool Name",
+  "global.labels.stakepool": "Stakepool Name",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
@@ -236,7 +249,7 @@
   "settings.general.aboutYoroi.versionLabel": "當前版本:",
   "settings.general.aboutYoroi.website": "Yoroi網站",
   "settings.general.aboutYoroi.youtube": "EMURGO YouTube",
-  "settings.general.explorer": "區塊鏈瀏覽器",
+  "settings.general.explorer": "explorer",
   "settings.general.languageSelect.info": "對EMURGO而言，友好的Yoroi錢包是永恆的主題。我們堅信用您的母語會讓理解區塊鏈概念更加容易。我們嘗試盡可能支持更多的語言，但為了支持更多的語言，我們需要接受來自社區翻譯的幫助。您所選的語言翻譯完全由社區提供。",
   "settings.general.languageSelect.labelInfo": "所選的語言翻譯由社區志願者提供",
   "settings.general.translation.acknowledgment": "感謝下列人員的貢獻： ",
@@ -585,6 +598,8 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "清除",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "確認",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "刪除",
+  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.title": "Registration has ended",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "無效復原片語",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "剩餘{number} 個單詞",
   "wallet.restore.dialog.paperPasswordLabel": "紙錢包密碼",
@@ -745,9 +760,9 @@
   "wallet.voting.dialog.confirmPin": "Confirm PIN",
   "wallet.voting.dialog.registerLabel": "Register",
   "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirm that I wrote down the PIN",
   "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirm that I saved the QR code",
   "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
