--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -22,6 +22,7 @@
   "api.errors.getPoolInfoApiError": "Error received from server while getting pool info.",
   "api.errors.getReputationError": "Error received from server while getting reputation.",
   "api.errors.getRewardHistoryApiError": "Error received from server while getting reward history.",
+  "api.errors.getTokenInfoApiError": "Error received from server while getting token info.",
   "api.errors.getTxHistoryForAddressesApiError": "Error received from server while getting transactions.",
   "api.errors.getTxsBodiesForUTXOsApiError": "Error received from server while getting TxBodies.",
   "api.errors.getTxsBodiesForUTXOsError": "Error received from api method call while getting TxBodies.",
@@ -737,6 +738,9 @@
   "wallet.transaction.sent": "{currency} sent",
   "wallet.transaction.state.failed": "failed",
   "wallet.transaction.state.pending": "pending",
+  "wallet.transaction.success.button.label": "Transaction page",
+  "wallet.transaction.success.explanation": "Track the status of the transaction from the Transactions page",
+  "wallet.transaction.success.title": "Successfully sent",
   "wallet.transaction.transactionAmount": "Transaction amount",
   "wallet.transaction.transactionId": "Transaction ID",
   "wallet.transaction.transactionMetadata": "Transaction Metadata",
