Compine the payment uri steps into one

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -229,6 +229,9 @@
   "profile.termsOfUse.title": "Terms Of Use",
   "profile.uriAccept.seePrompt": "Simply <strong>click <em>Allow</em></strong> to enable payment URLs",
   "profile.uriPrompt.form.explanation": "Do you want to enable Cardano payment URLs?",
+  "profile.uriPrompt.form.explanationLine2": "Yoroi allows you to generate special links that you can share with someone else and allow them to make an easy payment to you. You will be able to create these links right away.",
+  "profile.uriPrompt.form.explanationLine3": "But to allow you to click on such links you need to give Yoroi a special permission in the browser. Click \"Allow\" if you wish to do so.",
+  "profile.uriPrompt.form.explanationLine4": "You don't have to decide right now, you can always enable this feature in the \"Settings > Blockchain\" section.",
   "profile.uriPrompt.form.skipLabel": "Skip",
   "profile.uriSkip.descriptionLine1": "Although you will not be able to use payment URLs, you will still be able to generate them.",
   "profile.uriSkip.descriptionLine2": "You can enable this feature any time in the settings menu.",
